--- a/FINAL/travel-booking/src/main/resources/templates/management/partner/hotel-profile.html
+++ b/FINAL/travel-booking/src/main/resources/templates/management/partner/hotel-profile.html
@@ -127,11 +127,11 @@
                       </div>
                     </div>
                   </div>
-                  <!--                                    <div class="col-lg-6 px-5">-->
-                  <!--                                        <div id="map-container" style="width: 500px; height: 300px">-->
-                  <!--                                            <div id="map" style="height: 100%; width: 100%"></div>-->
-                  <!--                                        </div>-->
-                  <!--                                    </div>-->
+                                                      <div class="col-lg-6 px-5">
+                                                          <div id="map-container" style="width: 500px; height: 300px">
+                                                              <div id="map" style="height: 100%; width: 100%"></div>
+                                                          </div>
+                                                      </div>
                 </div>
               </form>
 
@@ -156,27 +156,10 @@
           integrity="sha512-rstIgDs0xPgmG6RX1Aba4KV5cWJbAMcvRCVmglpam9SoHZiUCyQVDdH2LPlxoHtrv17XWblE/V/PP+Tr04hbtA=="
           crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
-  <!--    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAoWOLjDkFNpk1ZS15jTN-YhlONrCF-6QE&callback=initMap" async defer></script>-->
+      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAoWOLjDkFNpk1ZS15jTN-YhlONrCF-6QE&callback=initMap" async defer></script>
 
   <script>
-    // // Tọa độ latitude và longitude
-    // let lat ;
-    // let long;
-    //
-    // function initMap() {
-    //     // Tạo một đối tượng bản đồ
-    //     var map = new google.maps.Map(document.getElementById('map'), {
-    //         center: { lat: lat, lng: long },
-    //         zoom: 14
-    //     });
-    //
-    //     // Tạo một đánh dấu trên bản đồ với tọa độ lat và long
-    //     var marker = new google.maps.Marker({
-    //         position: { lat: lat, lng: long },
-    //         map: map,
-    //         title: 'Test maps xem nào'
-    //     });
-    // }
+
 
     $(document).ready(function () {
       // Kích hoạt Select2 cho các thẻ select
@@ -414,8 +397,25 @@
         }
       });
 
-    });
+      // Tọa độ latitude và longitude
+      let lat ;
+      let long;
 
+      function initMap() {
+        // Tạo một đối tượng bản đồ
+        let map = new google.maps.Map(document.getElementById('map'), {
+          center: { lat: lat, lng: long },
+          zoom: 14
+        });
+
+        // Tạo một đánh dấu trên bản đồ với tọa độ lat và long
+        let marker = new google.maps.Marker({
+          position: { lat: lat, lng: long },
+          map: map,
+          title: 'Test maps xem nào'
+        });
+      }
+    });
 
   </script>
 </th:block>
