--- a/FINAL/travel-booking/src/main/resources/templates/fragments/signup-partner.html
+++ b/FINAL/travel-booking/src/main/resources/templates/fragments/signup-partner.html
@@ -35,18 +35,24 @@
                              id="signup-partner-password" placeholder="Password" autocomplete="off">
                       <small style="color: #e74c3c">Error</small>
                     </div>
-                    <div class="form-group mb-4 input-row">
+                    <div class="form-group mb-3 input-row">
                       <input type="password" name="password_name" class="form-control partner-signup-confirm-password"
                              id="signup-partner-confirm-password" placeholder="Re-enter Password" autocomplete="off">
                       <small style="color: #e74c3c">Error</small>
                     </div>
+                    <div class="form-group d-flex privacy-confirm">
+                      <input type="checkbox" class="custom-control-input" id="agreeTerm">
+                      <label class="custom-control-label mb-0 ms-1 lh-1" for="agreeTerm">I
+                        have read and accept the <a href="/term_policy" style="color: #029e9d">Terms and Privacy</a></label>
+                    </div>
+                    <span class="error-message" style="color: red; font-size: 12px"></span>
 <!--                    <div class="form-group mb-2 d-flex privacy-confirm">-->
 <!--                      <input type="checkbox" id="partner-policy-box" class="custom-control-input">-->
 <!--                      <label class="custom-control-label mb-0 ms-1 lh-1" for="partner-policy-box">I-->
 <!--                        have read and accept the <a href="/term_policy" style="color: #029e9d">Terms and Privacy</a> Policy?</label>-->
 <!--                    </div>-->
                     <div class="input-row">
-                      <button class="btn nir-btn w-100 login-btn mb-2" id="signup-partner-btn">Register</button>
+                      <button class="btn nir-btn w-100 login-btn my-2" id="signup-partner-btn">Register</button>
                     </div>
 
                   </form>
