--- a/FINAL/travel-booking/src/main/resources/templates/management/admin/admin-profile.html
+++ b/FINAL/travel-booking/src/main/resources/templates/management/admin/admin-profile.html
@@ -66,7 +66,7 @@
                 <div class="row">
                   <input type="file" hidden="hidden" id="avatar-input-account"/>
                   <div class="col-lg-6 mb-4">
-                    <label for="name" class="form-label"> Full Name *</label>
+                    <label for="name" class="form-label"> Full Name <span class="text-danger">*</span></label>
                     <input type="text" class="form-control" id="name" autocomplete="off"
                            placeholder name="name">
                   </div>
@@ -76,7 +76,7 @@
                            placeholder name="email">
                   </div>
                   <div class="col-lg-4 mb-5">
-                    <label for="genderList" class="form-label">Gender <span class="text-danger">*</span><span class="text-danger">*</span></label>
+                    <label for="genderList" class="form-label">Gender <span class="text-danger">*</span></label>
                     <select class="form-select" id="genderList" name="gender">
                       <option value="" disabled selected>Choose gender</option>
                       <option th:each="gender : ${genderList}" th:value="${gender}"
